
      - Made Silva work with ExtFile once again: we no longer
        configure the filesystem_path in the service_files, but leave
        it to the extfile.ini.

      - additional behaviour to mangle.Id.new(), when passing True as
        the first argument one can suppress the ValueError raised on
        invalid ids (and always have a new id generated)

    Bugs Fixed:

      - 101464: can't place headings inside list items in kupu 

      - 101228: remove slide links from object lookup window, so that
        the full SMI cannot be loaded within it

      - Set overflow of selects in Kupu toolboxes to hidden,
        preventing long titles from pushing the toolbox wider.

      - Changed the threshold variable in upgrade.py from 500 to 50,
        this may impact speed of upgrades negatively but it seems
        necessary for for instance ExtFile migration, where 500
        objects can become too large for a single commit.

      - Setting the i18n domain for kupu htmlmacros.html to silva so
        toolbox is translated again bug 101706.

      - Changed the new version button in the editor screen from an
        input to a button, to avoid css conflicts with frontend.css
        controls styles

      - fixed 156921: Escaping image title strings.

      - fixed 101240: SilvaExternalSource cannot be disabled.

      - fixed 100835: image upload screen should show allowed formats

      - fixed 101174: When an id is in use on the Zope level, inform
                      users accordingly
      
      - Added True switch to Image.py tag method to escape double
        quotes.

      - Changed the 'priority' attribute of the silva:content zcml
        attribute to a float, to support more granular priorities
        (they way it was prior to Silva 2.0 zcml)

      - xslt renderer: fixed an extra whitespace issue that occurred
        when an image as linked, by setting indent="no" in
        normal_view.xslt
